--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="balance">Balance</string>
     <string name="add_promo_code">Add Promo code</string>
     <string name="add_new_card">Add new card</string>
+    <string name="card_with_last_number">Card **** %s</string>
+    <string name="cash">Cash</string>
 </resources>
