--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="add_new_card">Add new card</string>
     <string name="card_with_last_number">Card **** %s</string>
     <string name="cash">Cash</string>
+    <string name="save">Save</string>
 </resources>
